--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Cape Water Watch</title>
 </head>
 <body>
-    <h1>Welcome to the homepage</h1>
+    <h1>COCT Alerts</h1>
 </body>
+    <script src="server.js"></script>
 </html>
