--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cape Water Watch</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>COCT Alerts</h1>
+    <section id="CWW-header">
+        <h1>COCT Alerts</h1>
+    </section>  
+    <section>
+        <h2>COCT Unplanned</h2>
+    </section> 
+    
+
 </body>
-    <script src="server.js"></script>
+    <script src="main.js"></script>
 </html>
