--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,18 @@
         <h2>COCT Unplanned</h2>
     </section> 
     
+    <table>
+        <tr>
+            <th>First Name: </th>
+            <th>Last Name: </th>
+            <th>Gender: </th>    
+        </tr>
+        <tr>
+            <td>Daniel</td>
+            <td>Nielsen</td>
+            <td>Male</td>    
+        </tr>    
+    </table>    
 
 </body>
     <script src="main.js"></script>
