--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,35 @@
     </section>  
     <section>
         <h2>COCT Unplanned</h2>
-    </section> 
+    </section>
+
+    <section class="planned-alerts-layout">
+        <div id="service-area">
+            <h2 id="service-area-heading"></h2>
+            <p id="service-area-text"></p>
+        </div>   
     
-    <table>
-        <tr>
-            <th>First Name: </th>
-            <th>Last Name: </th>
-            <th>Gender: </th>    
-        </tr>
-        <tr>
-            <td>Daniel</td>
-            <td>Nielsen</td>
-            <td>Male</td>    
-        </tr>    
-    </table>    
+        <div id="title">
+            <h2 id="title-heading"></h2>
+            <p id="title-text"></p>
+        </div>
+
+        <div id="area">
+            <h2 id="area-heading"></h2>
+            <p id="area-text"></p>
+        </div>
+
+        <div id="location">
+            <h2 id="location-heading"></h2>
+            <p id="location-text"></p>
+        </div>
+
+        <div id="publish-date">
+            <h2 id="publish-date-heading"></h2>
+            <p id="publish-date-text"></p>
+        </div>
+    </section>
+       
 
 </body>
     <script src="main.js"></script>
