--- a/public/index.html
+++ b/public/index.html
@@ -15,27 +15,19 @@
     </section>
 
     <section class="planned-alerts-layout">
-        <div id="title">
-            <h2 id="title-heading">Title</h2>
+        <div class="planned-alert-card">
+            <h2>Title</h2>
             <p id="title-text"></p>
-        </div>
-
-        <div id="area">
-            <h2 id="area-heading">Area</h2>
+      
+            <h2>Area</h2>
             <p id="area-text"></p>
-        </div>
 
-        <div id="location">
             <h2 id="location-heading">Location</h2>
             <p id="location-text"></p>
-        </div>
 
-        <div id="start-timestamp">
             <h2 id="start-timestamp-heading">Starting Time</h2>
             <p id="start-timestamp-text"></p>
-        </div>
 
-        <div id="forecast-end-timestamp">
             <h2 id="forecast-end-timestamp-heading">Forecasted End</h2>
             <p id="forecast-end-timestamp-text"></p>
         </div>
