--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <h1>COCT Alerts</h1>
     </section>  
     <section>
-        <h2>COCT Unplanned</h2>
+        <h2>COCT Planned</h2>
     </section>
 
     <section class="planned-alerts-layout">
