--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 <body>
     <section id="CWW-header">
         <h1>COCT Alerts</h1>
+        <button id="notification-btn">Send Notification</button>
     </section>  
     <section>
         <h2>COCT Planned</h2>
@@ -18,7 +19,7 @@
     <section class="planned-alerts-layout">
     </section>
     </section>
-       
+     
 
 </body>
     <script src="main.js"></script>
