service worker update

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="CWW-header">
         <h1>COCT Alerts</h1>
-        <button id="notification-btn">Send Notification</button>
+        <button onclick="requestNotificationPermission()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
         <h2>COCT Planned</h2>
