file structure update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cape Outage Watch</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="./assets/images/binoculars.png" />
+    <link rel="icon" href="binoculars.png" />
     <link rel="manifest" href="manifest.json" />
 </head>
 <body>
