test notification update

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <section id="CWW-header">
         <h1>COCT Alerts</h1>
-        <button onclick="requestNotificationPermission()" id="notification-btn">Send Notification</button>
+        <button onclick="testNoti()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
-        <h2>COCT Planned Live prod check</h2>
+        <h2>COCT Planned</h2>
 
     <section class="planned-alerts-layout">
     </section>
