--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <section id="CWW-header">
-        <h1>COCT Alerts</h1>
-        <button onclick="testNoti()" id="notification-btn">Send Notification</button>
+        <h1>COW</h1>
+        <button onclick="requestNotificationPermission()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
-        <h2>COCT Planned</h2>
+        <h2>COCT Unplanned Outages</h2>
 
     <section class="planned-alerts-layout">
     </section>
