--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <section id="CWW-header">
-        <h1>COW</h1>
+        <h1>Cape Outage Watch</h1>
         <button onclick="requestNotificationPermission()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
