--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="requestNotificationPermission()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
-        <h2>COCT Unplanned Outages</h2>
+        <h2>COCT Planned Outages</h2>
 
     <section class="planned-alerts-layout">
     </section>
