--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section id="CWW-header">
         <h1>Cape Outage Watch</h1>
-<!--  <button onclick="requestNotificationPermission()" id="notification-btn">Send Notification</button> -->
+ <button onclick="main()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
         <h2>COCT Planned Outages</h2>
