insert alerts update

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <section id="CWW-header">
         <h1>Cape Outage Watch</h1>
+        <p>Your hub for all unplanned electrical & water outages in the City.</p>
  <button onclick="main()" id="notification-btn">Send Notification</button>
     </section>  
     <section>
