--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
     <section id="CWW-header">
         <h1>Cape Outage Watch</h1>
         <p>Your hub for all unplanned electrical & water outages in the City.</p>
- <button onclick="main()" id="notification-btn">Send Notification</button>
     </section>  
+
+    <section id="area-search-filter">
+            <input id="area-search" type="text"></option>        
+            <button id="search-area-btn">Select Area</button>
+    </section>    
+
     <section>
         <h2>COCT Planned Outages</h2>
 
