install prompt update

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <section id="CWW-header">
         <h1>Cape Outage Watch</h1>
         <p>Your hub for all unplanned electrical & water outages in the City.</p>
+        <button id="install-btn">Install CapeOutagWatch</button>
     </section>  
 
+    <!-- 
     <section id="area-search-filter">
             <input id="area-search" type="text"></option>        
             <button id="search-area-btn">Select Area</button>
-    </section>    
+    </section> 
+    -->   
 
     <section>
         <h2>COCT Planned Outages</h2>
