--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="CWW-header">
         <h1>Cape Outage Watch</h1>
         <p>Your hub for all unplanned electrical & water outages in the City.</p>
-        <button id="install-btn">Install CapeOutagWatch</button>
+        <button id="install-btn">Install CapeOutageWatch</button>
     </section>  
 
     <!-- 
