added subscription button to enable notifications

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     <section class="planned-alerts-layout">
     </section>
     </section>
+    <div id="notification-setup" style="text-align: center; padding: 20px; background: #f0f0f0; margin-bottom: 20px;">
+        <h3>🚨 Get Cape Town Outage Alerts</h3>
+        <p>Enable push notifications to stay informed about water & power outages</p>
+        <button id="enable-notifications" style="padding: 10px 20px; font-size: 16px; background: #007cba; color: white; border: none; border-radius: 5px;">
+          Enable Notifications
+        </button>
+      </div>
      
 
 </body>
