--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="manifest" href="manifest.json" />
 </head>
 <body>
-    <section id="CWW-header">
-        <h1>Cape Outage Watch</h1>
-        <p>Your hub for all unplanned electrical & water outages in the City.</p>
-        <button id="install-btn">Install CapeOutageWatch</button>
-    </section>  
+    <div id="notification-setup" style="text-align: center; padding: 20px; background: #f0f0f0; margin-bottom: 20px;">
+        <h3>🚨 Get Cape Town Outage Alerts</h3>
+        <p>Enable push notifications to stay informed about water & power outages</p>
+        <button id="enable-notifications">
+          Enable Notifications
+        </button>
+      </div>
 
     <!-- 
     <section id="area-search-filter">
@@ -27,14 +29,8 @@
 
     <section class="planned-alerts-layout">
     </section>
-    </section>
-    <div id="notification-setup" style="text-align: center; padding: 20px; background: #f0f0f0; margin-bottom: 20px;">
-        <h3>🚨 Get Cape Town Outage Alerts</h3>
-        <p>Enable push notifications to stay informed about water & power outages</p>
-        <button id="enable-notifications" style="padding: 10px 20px; font-size: 16px; background: #007cba; color: white; border: none; border-radius: 5px;">
-          Enable Notifications
-        </button>
-      </div>
+    </section>`
+
      
 
 </body>
