web notificatoin update

--- a/index.html
+++ b/index.html
@@ -10,14 +10,28 @@
 </head>
 <body>
 
+    <header>
+        <h1>Cape Outage Watch (COW)</h1>
+        <button id="enableNotifications" style="
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            margin-bottom: 20px;
+        ">
+            🔔 Enable Outage Alerts
+        </button>
+    </header>
+
     <section>
-        <h2>COCT Planned Outages</h2>
-
-    <section class="planned-alerts-layout">
+        <h2>COCT Unplanned Outages</h2>
+        <section class="planned-alerts-layout">
+            <p>Fetching alerts...</p>
+        </section>
     </section>
-    </section>
-
-     
 
 </body>
     <script src="main.js"></script>
