Sidebar updated to include github logo with media query for mobile sizing

--- a/index.html
+++ b/index.html
@@ -41,8 +41,12 @@
         <ul class="menu-list">
             <!-- Links will be styled and controlled via JS/CSS -->
             <li><a href="#" id="about-link" class="menu-item">ℹ️ About COW</a></li>
-            <li><a href="#" id="contact-link" class="menu-item">📧 Contact</a></li>
-            <li><a href="https://github.com/your-username/your-repo" target="_blank" class="menu-item">🐙 GitHub</a></li>
+            <li>
+                <a href="https://github.com/your-username/your-repo" target="_blank" class="menu-item menu-github-link">
+                    <img src="./assets/images/github.png" alt="GitHub Logo" class="menu-icon-img">
+                    GitHub
+                </a>
+            </li>
         </ul>
     </nav>
 
