Styling updates for heading and enable notifications button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="menu-toggle" class="menu-icon">☰</button>
             
             <!-- 2. App Title -->
-            <h1 id="app-title">CapeOutageWatch (COW)</h1>
+            <h1 id="app-title">CapeOutageWatch</h1>
             
             <!-- 3. Notification Button (moves to the side, potentially hidden/repositioned on small screen) -->
             <div class="header-right-controls">
