Styling updates: heading and sidebar for desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="menu-toggle" class="menu-icon">☰</button>
             
             <!-- 2. App Title -->
-            <h1 id="app-title">CapeOutageWatch</h1>
+            <h2 id="app-title">CapeOutageWatch</h2>
             
             <!-- 3. Notification Button (moves to the side, potentially hidden/repositioned on small screen) -->
             <div class="header-right-controls">
@@ -42,8 +42,8 @@
             <!-- Links will be styled and controlled via JS/CSS -->
             <li><a href="#" id="about-link" class="menu-item">ℹ️ About COW</a></li>
             <li>
-                <a href="https://github.com/your-username/your-repo" target="_blank" class="menu-item menu-github-link">
-                    <img src="./assets/images/github.png" alt="GitHub Logo" class="menu-icon-img">
+                <a href="https://github.com/Najeeb223" target="_blank" class="menu-item menu-github-link">
+                    <img src="./images/github.png" alt="GitHub Logo" class="menu-icon-img">
                     GitHub
                 </a>
             </li>
