Navigation update: about page introduced for users and developers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- START: MOVED NAVIGATION MENU -->
             <nav id="mobile-menu" class="hidden-menu">
                 <ul class="menu-list">`
-                    <li><a href="#" id="about-link" class="menu-item">ℹ️ About COW</a></li>
+                    <li><a href="about.html" id="about-link" class="menu-item">ℹ️ About COW</a></li>
                     <li>
                         <a href="https://github.com/Najeeb223" target="_blank" class="menu-item menu-github-link">
                             <img src="./images/github.png" alt="GitHub Logo" class="menu-icon-img">
