About section refactored

--- a/about.html
+++ b/about.html
@@ -14,7 +14,6 @@
             <a href="index.html" class="back-link">
                 &larr; Back to Home
             </a>
-            <h2 id="page-title">About CapeOutageWatch (COW)</h2>
         </div>
     </header>
 
@@ -23,10 +22,11 @@
         <section class="info-section user-section">
             <h3 class="section-title">What is CapeOutageWatch?</h3>
             <p>
-                CapeOutageWatch (COW) is a community-driven tool designed to provide a quick, centralized view of essential service interruptions in the Cape Town area, focusing primarily on **Electricity** and **Water & Sanitation** outages.
+                CapeOutageWatch (COW) is a community-driven tool designed to provide a quick, centralized view of essential service interruptions in the Cape Town area, focusing primarily on Electrical and Water & Sanitation outages.
             </p>
             <p>
-                We fetch publicly available service alert data and present it in an easy-to-read, card-based format, allowing you to quickly check the status, location, and estimated resolution time for known issues in your neighborhood. Our goal is simple: to make finding outage information less frustrating.
+                We fetch publicly available service alert data from the city's alerts API and present it in an easy-to-read, card-based format, allowing you to quickly check the status, location, and estimated resolution time for known issues in your neighborhood. Our goal is simple: to make finding outage information less frustrating, and provide notifications to users for outages should they decide to receive them.
+            </p>
             </p>
             <p class="callout">
                 **Note:** All alert data displayed here is sourced from the City of Cape Town's official channels. COW simply presents this data in a more accessible format.
@@ -40,7 +40,7 @@
         <section class="info-section dev-section">
             <h3 class="section-title dev-title">For Developers & Contributors</h3>
             <p>
-                COW is an open-source project built with modern web technologies, aiming to be a fast and reliable Progressive Web Application (PWA). We highly welcome contributions from the developer community!
+                COW is an open-source project built with modern web technologies, aiming to be a fast and reliable Progressive Web Application (PWA). We highly welcome contributions or any kind of technical advice.
             </p>
 
             <div class="dev-details-container">
@@ -60,8 +60,8 @@
                     <h4>Contact the Maintainer</h4>
                     <p>
                         For direct communication regarding the project or collaboration, you can reach the primary maintainer via email:
-                        <a href="mailto:Najeeb223@example.com" class="contact-email-link">Najeeb223@example.com</a> 
-                        (Please replace with your actual email when deploying).
+                        <a href="mailto:najeebwarsame@gmail.com" class="contact-email-link">najeebwarsame@gmail.com
+                    </a> 
                     </p>
                 </div>
             </div>
