Google analytics integration for user tracking

--- a/about.html
+++ b/about.html
@@ -6,6 +6,14 @@
     <title>About CapeOutageWatch</title>
     <link rel="stylesheet" href="about.css" />
     <link rel="icon" href="./assets/images/binoculars.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7128W83WFG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-7128W83WFG');
+    </script>
 </head>
 <body>
     <header id="about-header">
