Pagination update for 10 cards per page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <section class="planned-alerts-layout">
             <p class="loading-message">Fetching alerts...</p>
         </section>
+        <!-- Pagination Controls -->
+    <div id="pagination-controls" class="pagination-controls-container">
+        <button id="prev-page-button" class="purple-button" disabled>&larr; Previous Page</button>
+        <span id="page-info" class="page-info-text">Page 1 of 1</span>
+        <button id="next-page-button" class="purple-button">Next Page &rarr;</button>
+    </div>
     </main>
     <script src="main.js"></script>
 </body>
