--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="./assets/images/binoculars.png" />
     <link rel="manifest" href="manifest.json" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7128W83WFG"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-7128W83WFG');
+    </script>
 </head>
 <body>
     <!-- Main Header with Purple Theme -->
