COW launch after final refactoring

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button id="enableNotifications" class="purple-button">
                 🔔 Enable Outage Alerts
             </button>
-            <p class="intro-text">Get instant push notifications about water and electricity outages in Cape Town. Stay informed and plan ahead.</p>
+            <p class="intro-text">Get instant push notifications about water and electricity outages in Cape Town.</p>
         </div>
         
         <h2 class="section-heading">Active Outage Alerts</h2>
